--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- Wrap Everything in the webpage-->
     <div class="wrapper">
         <!-- start of the NavBar-->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
 
         <!-- Jumbotron Code-->
         <div class="jumbotron">
-            <h1>The Truth Is Out There</h1>
+            <h1 class="display-4">The Truth Is Out There</h1>
         </div>
 
         <!--title -->
@@ -65,16 +65,16 @@
             <div class="row">
                 <!--Filter-->
                 <div class="col-md-3">
-                    <form>
+                    <form class=""bg-dark>
                         <p>Filter Search</p>
                         <ul class="list-group">
-                            <li class="list-group-item">
+                            <li class="list-group-item bg-dark">
                                 <label for="date">Enter Date</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
 
                             </li>
-                            <li class="list-group-item">
-                                <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                            <li class="list-group-item bg-dark">
+                                <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
 
                             </li>
 
